--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,3 +14,5 @@
 <app-signalwithcomputed></app-signalwithcomputed>
 <app-album></app-album>
 <app-calculation></app-calculation>
+<app-calculas></app-calculas>
+<app-calculator></app-calculator>
