Added some formdata

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,3 +16,6 @@
 <app-calculation></app-calculation>
 <app-calculas></app-calculas>
 <app-calculator></app-calculator>
+<app-formdata></app-formdata>
+<app-formdatawithclass></app-formdatawithclass>
+<app-forminputdata></app-forminputdata>
