call api details data

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,3 +19,6 @@
 <app-formdata></app-formdata>
 <app-formdatawithclass></app-formdatawithclass>
 <app-forminputdata></app-forminputdata>
+<app-apidata></app-apidata>
+<app-apidetails></app-apidetails>
+<app-apidatadetails></app-apidatadetails>
